add openreview link

--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
       <b>Time</b>: 9 AM -- 5:30 PM
     </p>
     <p>
+      <b>Schedule</b>:
+      <a href="">TBD</a>
+    </p>
+    <p>
       <b>Speakers</b>:
       <a href="./pages/speakers.html">here</a>
     </p>
     <p>
-      <b>Schedule</b>:
-      <a href="">TBD</a>
+      <b>Paper Submission</b>:
+      <a href="https://openreview.net/group?id=NeurIPS.cc/2024/Workshop/SSL">OpenReview</a>
     </p>
     <p>
       <b>NeurIPS link</b>: 
