--- a/pages/call-for-participation.html
+++ b/pages/call-for-participation.html
@@ -98,7 +98,7 @@
     </p>
     
     <p> <b>Contact:</b> sslneurips2024@gmail.com</p>
-    <p> Paper submission at <b><a href="">OpenReview (TBD)</a></b>
+    <p> Paper submission at <b><a href="https://openreview.net/group?id=NeurIPS.cc/2024/Workshop/SSL">OpenReview</a></b>
     
     <h4>Important Dates </h4>
 <p>
