--- a/index.html
+++ b/index.html
@@ -73,10 +73,6 @@
       <b>Time</b>: 9 AM -- 5:30 PM
     </p>
     <p>
-      <b>Schedule</b>:
-      <a href="">TBD</a>
-    </p>
-    <p>
       <b>Speakers</b>:
       <a href="./pages/speakers.html">here</a>
     </p>
@@ -84,9 +80,13 @@
       <b>Paper Submission</b>:
       <a href="https://openreview.net/group?id=NeurIPS.cc/2024/Workshop/SSL">OpenReview</a>
     </p>
-    <p>
+    <!-- <p>
       <b>NeurIPS link</b>: 
-      <!-- <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a> -->
+      <a href="">TBD</a>
+    </p> -->
+    <!-- <p>
+      <b>Schedule</b>:
+      <-- <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a> -->
       <a href="">TBD</a>
     </p>
     
@@ -99,9 +99,6 @@
   <p>
     Existing research on self-supervised learning (SSL) has primarily concentrated on enhancing empirical performance without substantial theoretical underpinnings. Although SSL approaches are empirically effective across various benchmarks, their theoretical foundations and practical applications remain less explored. Key questions such as the reasons behind the superior performance of certain auxiliary tasks, the requisite amount of unlabeled data for learning effective representations, the impact of neural architectures on SSL performance, and the practical scenarios where SSL outperforms supervised models, are still largely unanswered.
   </p>
-  <p>
-    Our workshop aims to address these gaps by fostering a dialogue between theory and practice, especially in the context of LLMs. We plan to gather researchers interested in SSL from diverse fields to explore the theoretical bases of empirically successful SSL methods and to discuss how these theoretical insights could further enhance SSL’s practical performance. This workshop will differentiate itself from previous SSL-related workshops by prioritizing the establishment of theoretical foundations and providing theoretical frameworks to guide the development of new SSL methods. Additionally, we will attempt to close the loop from practice to theory, by inviting practitioners to share their experiences and insights regarding the practical advantages and challenges of using SSL.
-  </p>
     <!-- <div></div> -->
 <!-- </div> -->
 
@@ -109,10 +106,13 @@
     <!-- </div> -->
 
 <!-- <div class="text"> -->
-    <p>In the 5th iteration of this workshop, we continue to bridge this gap between theory and practice. 
-      We bring together SSL-interested researchers from various domains to discuss the theoretical foundations of empirically well-performing SSL approaches and how the theoretical insights can further improve SSL’s empirical performance.</p>
-    <p>We invite submissions of both theoretical works and empirical works, and the intersection of the two. 
-      The topics include but are not limited to: </p>
+    <p>
+      In the 5th iteration of this workshop, we aim to address these gaps by fostering a dialogue between theory and practice, especially in the   context of LLMs. We bring together SSL-interested researchers from various domains to discuss the theoretical foundations of empirically well-performing SSL approaches and how the theoretical insights can further improve SSL’s empirical performance.
+    </p>
+    <p>
+      We invite submissions of both theoretical works and empirical works, and the intersection of the two. 
+      The topics include but are not limited to: 
+    </p>
     <ul>
     <li>
     Theoretical foundations of SSL
