--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     </p> -->
     <!-- <p>
       <b>Schedule</b>:
-      <-- <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a> -->
+      <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a>
       <a href="">TBD</a>
-    </p>
+    </p> -->
     
   
   <!--p><b>For poster sessions: </b>posters can be viewed in the <a href='./pages/Accepted Paper.html'>Accepted Papers</a> page. If interested in a poster, you can click on the corresponding Zoom link. The authors will be presenting their posters in their Zoom.</p-->
