--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    In-person workshop at <a href="https://nips.cc/Conferences/2024/Dates">NeurIPS 2024</a>
     </p>
     <p>
-      <b>Date:</b> December 14 or 15, 2024
+      <b>Date:</b> December 14, 2024
     </p>
     <p>
       <b>Contact Email</b>: sslneurips2024@gmail.com
