--- a/pages/call-for-participation.html
+++ b/pages/call-for-participation.html
@@ -104,8 +104,8 @@
 <p>
   Abstract Registration Deadline: Sep <s>11</s> 17, 23:59 AoE<br />
   Paper Submission Deadline: Sep <s>14</s> 19, 23:59 AoE<br />
-  Review Deadline: Oct 06, 23:59 AoE<br />
-  Author Notification: Oct 09, 23:59 AoE<br />
+  Review Deadline: Oct <s>06</s>08, 23:59 AoE<br />
+  Author Notification: Oct <s>09</s>11, 23:59 AoE<br />
   Camera-ready Papers Due: Oct 28, 23:59 AoE</p>
 <!-- 
 
