update speaker image

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
    In-person workshop at <a href="https://nips.cc/Conferences/2024/Dates">NeurIPS 2024</a>
     </p>
     <p>
-      <b>Date:</b> December 14, 2024
+      <b>Date:</b> Saturday, December 14, 2024
     </p>
     <p>
       <b>Contact Email</b>: sslneurips2024@gmail.com
     </p>
     <p>
-      <b>Location:</b> Room TBD, Vancouver, Canada
+      <b>Location:</b> Meeting 202-204, Vancouver Convention Center, Canada
     </p>
     <p>
       <b>Time</b>: 9 AM -- 5:30 PM
