--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -67,15 +67,15 @@
     <div class="thumbnail">
       <a href="https://homes.cs.washington.edu/~yejin/">
       <img 
-          src="../images/speakers_200x200/yejin_choi.jpg"
-          alt="Yejin Choi headshot"
+          src="../images/speakers_200x200/hanna.jpg"
+          alt="Hanna Hajishirzi headshot"
           style="width:240px;height:240px"
           align="center">
       <div class="caption">
-          <h5>Yejin Choi</h5>
+          <h5>Hanna Hajishirzi</h5>
       </div>
       </a>
-      <p>Professor, University of Washington
+      <p>Associate Professor, University of Washington
       <br />
       <!-- <br /> -->
       <!-- <emph>Finance Chair</emph> -->
