update speaker image

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -83,7 +83,7 @@
 
   <div class="col-xs-12 col-md-4" style="height:360px"> 
     <div class="thumbnail">
-      <a href="https://homes.cs.washington.edu/~yejin/">
+      <a href="https://homes.cs.washington.edu/~hannaneh/">
       <img 
           src="../images/speakers_200x200/hanna.jpg"
           alt="Hanna Hajishirzi headshot"
