update speaker image

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -75,7 +75,7 @@
             <h5>Trevor Darrell</h5>
         </div>
         </a>
-        <p>Professor, UC Berkeley
+        <p>UC Berkeley
         <br />
         </p> 
     </div>
@@ -93,7 +93,7 @@
           <h5>Hanna Hajishirzi</h5>
       </div>
       </a>
-      <p>Associate Professor, University of Washington
+      <p>University of Washington
       <br />
       </p>  
     </div>
@@ -111,7 +111,7 @@
             <h5>Phillip Isola</h5>
         </div>
         </a>
-        <p>Associate Professor, MIT
+        <p>MIT
         <br />
         <!-- <br /> -->
         <!-- <emph>Finance Chair</emph> -->
@@ -136,7 +136,7 @@
             <h5>Hilde Kuehne</h5>
         </div>
         </a>
-        <p>Professor, Univ. of Bonn & MIT-IBM Watson AI Lab
+        <p>Univ. of Bonn & MIT-IBM Watson AI Lab
         <br />
         </p>  
     </div>
@@ -155,7 +155,7 @@
           <h5>Pauline Luc</h5>
       </div>
       </a>
-      <p>Research Scientist, Google DeepMind
+      <p>Google DeepMind
       <br />
       <!-- <br /> -->
       <!-- <emph>Finance Chair</emph> -->
@@ -180,7 +180,7 @@
           <h5>Ziwei Liu</h5>
       </div>
       </a>
-      <p>Assistant Professor, Nanyang Technological University 
+      <p>Nanyang Technological University 
       <br />
       <!-- <br /> -->
       <!-- <emph>Finance Chair</emph> -->
@@ -204,7 +204,7 @@
             <h5>Alan Yuille</h5>
         </div>
         </a>
-        <p>Professor, Johns Hopkins University
+        <p>Johns Hopkins University
         <br />
         </p>  
     </div>
@@ -222,7 +222,7 @@
             <h5>Sherry Yang</h5>
         </div>
         </a>
-        <p>Research Scientist, Google DeepMind
+        <p>Google DeepMind
         <!-- <br /> -->
         <!-- <emph>Finance Chair</emph> -->
         <!-- </p> -->
@@ -246,7 +246,7 @@
           <h5>Luke Zettlemoyer</h5>
       </div>
       </a>
-      <p>Professor, University of Washington
+      <p>University of Washington & Meta AI
       <br />
       <!-- <br /> -->
       <!-- <emph>Finance Chair</emph> -->
