--- a/pages/organizers.html
+++ b/pages/organizers.html
@@ -82,7 +82,7 @@ for helping peer review all submissions. -->
               <h5>XuDong Wang</h5>
           </div>
           </a>
-          <p>PhD Candidate, UC Berkeley
+          <p>UC Berkeley
           <br />
           <emph>Email:</emph>
           <a href="mailto:xdwang@eecs.berkeley.edu"> xdwang@eecs.berkeley.edu </a>
@@ -102,7 +102,7 @@ for helping peer review all submissions. -->
               <h5>Ishan Misra</h5>
           </div>
           </a>
-          <p>Research Scientist, GenAI, Meta
+          <p>GenAI, Meta
           <br />
           <emph>Email:</emph>
           <a href="mailto:imisra@meta.com"> imisra@meta.com </a>
@@ -122,7 +122,7 @@ for helping peer review all submissions. -->
               <h5>Mathilde Caron</h5>
           </div>
           </a>
-          <p>Research Scientist, Google DeepMind
+          <p>Google DeepMind
           
           <!-- <br /> -->
           <!-- <emph>Finance Chair</emph> -->
@@ -147,7 +147,7 @@ for helping peer review all submissions. -->
               <h5>Tengda Han</h5>
           </div>
           </a>
-          <p>Research Scientist, Google DeepMind
+          <p>Google DeepMind
           <br />
           <emph>Email:</emph>
           <a href="mailto:htd@robots.ox.ac.uk"> htd@robots.ox.ac.uk </a>
@@ -170,7 +170,7 @@ for helping peer review all submissions. -->
             <h5>Pengtao Xie</h5>
         </div>
         </a>
-        <p>Assistant Professor, UC San Diego
+        <p>UC San Diego
         <br />
         <emph>Email:</emph>
         <a href="mailto:pengtaoxie2008@gmail.com"> pengtaoxie2008@gmail.com </a>
