--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -236,17 +236,17 @@
 
   <div class="col-xs-12 col-md-4" style="height:360px"> 
     <div class="thumbnail">
-      <a href="https://www.cs.washington.edu/people/faculty/lsz/">
+      <a href="https://scholar.google.com/citations?user=wY932-AAAAAJ&hl=en/">
       <img
-          src="../images/speakers_200x200/luke.jpeg"
-          alt="Luke Zettlemoyer headshot"
+          src="../images/speakers_200x200/lili.jpg"
+          alt="Lili Yu headshot"
           style="width:240px;height:240px"
           align="center">
       <div class="caption">
-          <h5>Luke Zettlemoyer</h5>
+          <h5>Lili Yu</h5>
       </div>
       </a>
-      <p>University of Washington & Meta AI
+      <p>FAIR, Meta
       <br />
       <!-- <br /> -->
       <!-- <emph>Finance Chair</emph> -->
