--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -8,7 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Schedule | NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice
+  <title>Schedule | NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice
 </title>
   <link rel="canonical" href="../pages/schedule.html">
 
@@ -33,13 +33,13 @@ Tenative schedule is below with possible changes.">
           </a>
         </div> -->
         <div class="col-xs-10">
-          <h1 class="title"><a href="../">NeurIPS 2023 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
+          <h1 class="title"><a href="../">NeurIPS 2024 Workshop: Self-Supervised Learning - Theory and Practice</a></h1>
           <!-- <p class="text-muted">Workshop at NeurIPS 2020</p> -->
           <br />
           <ul class="list-inline" style="font-weight:600"> 
             <li class="list-inline-item"><a href="../index.html">Home</a></li>
             <li class="list-inline-item"><a href="../pages/call-for-participation.html">Call for Papers</a></li>
-            <!-- <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li> -->
+            <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li>
             <li class="list-inline-item"><a href="../pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="../pages/organizers.html">Organizers</a></li>
             <!-- <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li> -->
@@ -55,18 +55,18 @@ Tenative schedule is below with possible changes.">
 <article class="article">
   <div class="content">
     <p>
-    The workshop schedule is as follows (all times in the CT timezone, i.e., local time in New Orleans).
+    The workshop schedule is as follows (all times in the PST timezone, i.e., local time in Vancouver).
    </p>
     <p>
-      <b>Date:</b> December 16, 2023
+      <b>Date:</b> December 14, 2024
     </p>
     <p>
       <b>Room:</b> 217 -- 219
     </p>
     <p>
-       <b>NeurIPS link</b>: https://neurips.cc/virtual/2023/workshop/66514 (requires a NeurIPS registration for live stream)
+       <b>NeurIPS link</b>: https://neurips.cc/virtual/2024/workshop/84703 (requires a NeurIPS registration for live stream)
     </p>
-    <p>All papers will be presented in <b>both</b> poster sessions.</p>
+    <p>All papers will be presented in poster sessions.</p>
     <p>Note: slides of invited talks will be made available here soon.</p>
     <br>
     <hr>
@@ -77,63 +77,82 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>09:15-09:45</td>
-        <td>Invited Talk: Yuki M Asano<br><i>Modern Self-Supervised Image Learning from Videos</i>
-          <a href="../slides/NeurIPS_2023_Yuki_Asano.pdf">[slides]</a></td>
+        <td>Invited Talk: Sherry Yang (Google DeepMind)<br><i> Self-Supervised World Modeling from Internet Data</i>
+          <a href="">[slides]</a></td>
       </tr>
       <tr>
         <td>09:45-10:15</td>
-        <td>Invited Talk: Diane Larlus<br><i>Visual Representations that Transfer</i>
-          <a href="../slides/NeurIPS23_SSL_Larlus.pdf">[slides]</a></td>
+        <td>Invited Talk: Pauline Luc (Google DeepMind)<br><i>Self-Supervised Learning for Videos</i>
+          <a href="">[slides]</a></td>
       </tr>
       <tr>
-        <td>10:15-10:45</td>
-        <td>Invited Talk: Alyosha Efros<br><i>The Revolution Will not Be Supervised... Almost 10 Years Later</i>
-          <a href="../slides/Revolution_self-superivsed_nips_2023_Efros.pdf">[slides]</a></td>
-      </tr>
-      <tr>
-        <td>10:45-11:00</td>
+        <td>10:15-10:30</td>
         <td>Coffee Break</td>
       </tr>
       <tr>
+        <td>10:30-11:00</td>
+        <td>Invited Talk: Hanna Hajishirzi (University of Washington & AI2)<br><i>TBD</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
         <td>11:00-11:30</td>
-        <td>Invited Talk: Abhinav Gupta<br><i>Self-supervised Learning: Towards Rich Representations?</i></td>
+        <td>Invited Talk: Ziwei Liu (Nanyang Technological University)<br><i>From High-fidelity 3D Generative Models to Dynamic Embodied Learning</i></td>
       </tr>
       <tr>
         <td>11:30-12:00</td>
-        <td>Invited Talk: Chelsea Finn<br><i>Updating Language Models without Human Supervision</i>
-        <a href="../slides/neurips_ssl_factuality_camels_2023.pdf">[slides]</a></td>
-      </tr>
-      <tr>
-        <td>12:00-13:00</td>
-        <td>Poster Session I</td>
-      </tr>
-      <tr>
-        <td>13:00-14:15</td>
-        <td>Lunch Break</td>
-      </tr>
-      <tr>
-        <td>14:15-14:45</td>
-        <td>Invited Talk: Xinyun Chen<br><i>Self-Improvement with Large Language Models</i>
-          <a href="../slides/Xinyun_self-improvement_talk.pdf">[slides]</a></td>
-      </tr>
-      <tr>
-        <td>14:45-15:00</td>
-        <td>Coffee break</td>
-      </tr>
-      <tr>
-        <td>15:00-16:00</td>
         <td>Oral Talks: 
           <ul>
-            <li>Bridging State and History Representations: Understanding Self-Predictive RL</li>
-            <li>Learning Orthonormal Features in Self-Supervised Learning using Functional Maximal Correlation</li>
-            <li>Learning to Embed Time Series Patches Independently</li>
-            <li>On the Varied Faces of Overparameterization in Supervised and Self-Supervised Learning</li>
+            <li>In-Context Symmetries: Self-Supervised Learning through Contextual World Models. </li>
+            <li>A Unifying Framework for Action-Conditional Self-Predictive Reinforcement Learning. </li>
           </ul>
         </td>
       </tr>
       <tr>
-        <td>16:00-17:30</td>
-        <td>Poster Session II</td>
+        <td>12:00-12:30</td>
+        <td>Lunch Break</td>
+      </tr>
+      <tr>
+        <td>12:30-13:50</td>
+        <td>Poster Session</td>
+      </tr>
+      <tr>
+        <td>14:15-14:45</td>
+        <td>Invited Talk: Trevor Darrell (UC Berkeley)<br><i>From Unsupervised Segmentation to Visual Prompting</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>14:00-14:30</td>
+        <td>Invited Talk: Trevor Darrell (UC Berkeley)<br><i>From Unsupervised Segmentation to Visual Prompting</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>14:30-15:00</td>
+        <td>Invited Talk: Alan Yuille (John Hopkins University)<br><i>Supervision of 3D-aware models by Synthetic Data</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>15:00-15:30</td>
+        <td>Invited Talk: Phillip Isola (MIT)<br><i>Representation Learning from Human Feedback</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>15:30-16:00</td>
+        <td>Invited Talk: Lili Yu (FAIR, Meta)<br><i>Paths Towards Deep Fused Multimodal Modeling</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>16:00-16:30</td>
+        <td>Hilde Kuehne (Univ. of Bonn & MIT-IBM Watson AI Lab)<br><i>TBD</i>
+          <a href="">[slides]</a></td>
+      </tr>
+      <tr>
+        <td>16:30-17:00</td>
+        <td>Oral Talks: 
+          <ul>
+            <li>Occam's Razor for Self Supervised Learning: What is Sufficient to Learn Good Representations?</li>
+            <li>Neural Embedding Ranks: Aligning 3D latent dynamics with movement for long-term decoding.</li>
+          </ul>
+        </td>
       </tr>
     </table>
     <hr>
