--- a/index.html
+++ b/index.html
@@ -80,15 +80,14 @@
       <b>Paper Submission</b>:
       <a href="https://openreview.net/group?id=NeurIPS.cc/2024/Workshop/SSL">OpenReview</a>
     </p>
-    <!-- <p>
+    <p>
       <b>NeurIPS link</b>: 
-      <a href="">TBD</a>
-    </p> -->
-    <!-- <p>
+      <a href="https://neurips.cc/virtual/2024/workshop/84703">TBD</a>
+    </p>
+    <p>
       <b>Schedule</b>:
-      <a href="https://neurips.cc/virtual/2024/workshop/66514">TBD</a>
-      <a href="">TBD</a>
-    </p> -->
+      <a href="./pages/schedule.html">here</a>
+    </p>
     
   
   <!--p><b>For poster sessions: </b>posters can be viewed in the <a href='./pages/Accepted Paper.html'>Accepted Papers</a> page. If interested in a poster, you can click on the corresponding Zoom link. The authors will be presenting their posters in their Zoom.</p-->
