--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <b>Time</b>: 9 AM -- 5:30 PM
     </p>
     <p>
-      <b>Location:</b> Meeting 202-204, Vancouver Convention Center, Canada
+      <b>Location:</b> West Meeting Room 202-204, Vancouver Convention Center, Canada
     </p>
     <p>
       <b>Contact Email</b>: sslneurips2024@gmail.com
