--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -61,7 +61,7 @@ Tenative schedule is below with possible changes.">
       <b>Date:</b> December 14, 2024
     </p>
     <p>
-      <b>Room:</b> 217 -- 219
+      <b>Room:</b> West Meeting Room 202-204
     </p>
     <p>
        <b>NeurIPS link</b>: https://neurips.cc/virtual/2024/workshop/84703 (requires a NeurIPS registration for live stream)
