--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -40,7 +40,7 @@
           <ul class="list-inline" style="font-weight:600"> 
             <li class="list-inline-item"><a href="../index.html">Home</a></li>
             <li class="list-inline-item"><a href="../pages/call-for-participation.html">Call for Papers</a></li>
-            <!-- <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li> -->
+            <li class="list-inline-item"><a href="../pages/schedule.html">Schedule</a></li>
             <li class="list-inline-item"><a href="../pages/speakers.html">Speakers</a></li>
             <li class="list-inline-item"><a href="../pages/organizers.html">Organizers</a></li>
             <!-- <li class="list-inline-item"><a href="../pages/program-committee.html">Program Committee</a></li> -->
