--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -96,7 +96,8 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>11:00-11:30</td>
-        <td>Invited Talk: Ziwei Liu (Nanyang Technological University)<br><i>From High-fidelity 3D Generative Models to Dynamic Embodied Learning</i></td>
+        <td>Invited Talk: Ziwei Liu (Nanyang Technological University)<br><i>From High-fidelity 3D Generative Models to Dynamic Embodied Learning</i>
+          <a href="">[slides]</a></td>
       </tr>
       <tr>
         <td>11:30-12:00</td>
