update hanna's talk title

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -91,7 +91,7 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>10:30-11:00</td>
-        <td>Invited Talk: Hanna Hajishirzi (University of Washington & AI2)<br><i>TBD</i>
+        <td>Invited Talk: Hanna Hajishirzi (University of Washington & AI2)<br><i>OLMo & Molmo: Open Textual and Visual Language Models</i>
           <a href="">[slides]</a></td>
       </tr>
       <tr>
