update hanna's talk title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
     <p>
       <b>NeurIPS link</b>: 
-      <a href="https://neurips.cc/virtual/2024/workshop/84703">TBD</a>
+      <a href="https://neurips.cc/virtual/2024/workshop/84703">here</a>
     </p>
     <p>
       <b>Paper Submission</b>:
