update title and figure

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -147,7 +147,7 @@
     <div class="thumbnail">
       <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ&hl=en/">
       <img
-          src="../images/speakers_200x200/pauline.jpg"
+          src="../images/speakers_200x200/pauline.jpeg"
           alt="Pauline Luc headshot"
           style="width:240px;height:240px"
           align="center">
