--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -96,7 +96,7 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>11:00-11:30</td>
-        <td>Invited Talk: Ziwei Liu (Nanyang Technological University)<br><i>From High-fidelity 3D Generative Models to Dynamic Embodied Learning</i>
+        <td>Hilde Kuehne (Univ. of Tuebingen & MIT-IBM Watson AI Lab)<br><i>Advances in Self-supervised Multimodal Learning</i>
           <a href="">[slides]</a></td>
       </tr>
       <tr>
@@ -137,8 +137,8 @@ Tenative schedule is below with possible changes.">
           <a href="">[slides]</a></td>
       </tr>
       <tr>
-        <td>16:00-16:30</td>
-        <td>Hilde Kuehne (Univ. of Bonn & MIT-IBM Watson AI Lab)<br><i>TBD</i>
+        <td>4:00-4:30</td>
+        <td>Invited Talk: Ziwei Liu (Nanyang Technological University)<br><i>From High-fidelity 3D Generative Models to Dynamic Embodied Learning</i>
           <a href="">[slides]</a></td>
       </tr>
       <tr>
