update title and figure

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -136,7 +136,7 @@
             <h5>Hilde Kuehne</h5>
         </div>
         </a>
-        <p>Univ. of Bonn & MIT-IBM Watson AI Lab
+        <p>Univ. of Tuebingen & MIT-IBM Watson AI Lab
         <br />
         </p>  
     </div>
@@ -204,7 +204,7 @@
             <h5>Alan Yuille</h5>
         </div>
         </a>
-        <p>Johns Hopkins University
+        <p>John Hopkins University
         <br />
         </p>  
     </div>
