--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -82,7 +82,7 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>09:45-10:15</td>
-        <td>Invited Talk: Pauline Luc (Google DeepMind)<br><i>Self-Supervised Learning for Videos</i>
+        <td>Invited Talk: Pauline Luc (Google DeepMind)<br><i>Self-supervision for General Video Understanding Beyond Semantics</i>
           <a href="">[slides]</a></td>
       </tr>
       <tr>
