--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -123,7 +123,7 @@ Tenative schedule is below with possible changes.">
       </tr>
       <tr>
         <td>14:30-15:00</td>
-        <td>Invited Talk: Alan Yuille (John Hopkins University)<br><i>Supervision of 3D-aware models by Synthetic Data</i>
+        <td>Invited Talk: Alan Yuille (Johns Hopkins University)<br><i>Supervision of 3D-aware models by Synthetic Data</i>
           <a href="">[slides]</a></td>
       </tr>
       <tr>
